--- a/backend/package.json
+++ b/backend/package.json
@@ -27,7 +27,8 @@
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
     "node-fetch": "^3.3.2",
-    "prisma": "^5.0.0"
+    "prisma": "^5.0.0",
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@types/cors": "^2.8.0",
