--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,11 +1,49 @@
+
+#############################################
+# Backend Environment Variables (Example)   #
+#############################################
+
+# Server
+PORT=4000
 NODE_ENV=development
-# For local development, use SQLite:
+LOG_LEVEL=info
+
+# Database
+# For dev SQLite (Prisma): file:./dev.db
 DATABASE_URL="file:./dev.db"
 # For production, use PostgreSQL:
 # DATABASE_URL=postgresql://user:password@localhost:5432/loungenie
-PORT=4000
-# Use a long random value; do NOT commit a real secret
-JWT_SECRET=replace-with-long-random-secret
-AZURE_CLIENT_ID=
-AZURE_TENANT_ID=
-AZURE_CLIENT_SECRET=
+
+# JWT / Auth
+JWT_SECRET="replace-with-long-random-secret"
+
+# Uploads
+UPLOAD_MAX_SIZE_MB=2
+
+# Rate Limiting
+RATE_LIMIT_GLOBAL_MAX=100
+RATE_LIMIT_GLOBAL_WINDOW_MS=60000
+RATE_LIMIT_LOGIN_MAX=10
+RATE_LIMIT_LOGIN_WINDOW_MS=60000
+RATE_LIMIT_REGISTER_MAX=5
+RATE_LIMIT_REGISTER_WINDOW_MS=60000
+RATE_LIMIT_UPLOAD_MAX=10
+RATE_LIMIT_UPLOAD_WINDOW_MS=60000
+RATE_LIMIT_NOTIFICATIONS_MAX=20
+RATE_LIMIT_NOTIFICATIONS_WINDOW_MS=60000
+
+# (Future) Outlook / Azure AD SSO
+# AZURE_CLIENT_ID=
+# AZURE_TENANT_ID=
+# AZURE_CLIENT_SECRET=
+
+# (Future) HubSpot Integration
+# HUBSPOT_API_KEY=
+
+# (Future) File storage (local or S3 style)
+# FILE_STORAGE_DIR=./uploads
+
+#############################################
+# Copy to .env and adjust values for local.  #
+# Never commit the real .env file.           #
+#############################################
