--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,7 +5,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "npx eslint src --ext .ts,.tsx",
+    "typecheck": "tsc --noEmit",
+    "test": "npx vitest run"
   },
   "dependencies": {
     "react": "^18.2.0",
