--- a/backend/package.json
+++ b/backend/package.json
@@ -11,7 +11,9 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "eslint \"src/**/*.{ts,tsx}\" --fix",
     "format": "prettier --write ..",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "test": "vitest run --reporter=default --coverage",
+    "test:watch": "vitest"
   },
   "dependencies": {
     "@azure/msal-node": "^3.7.4",
@@ -24,24 +26,39 @@
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.1",
+    "file-type": "^18.7.0",
     "helmet": "^7.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "node-fetch": "^3.3.2",
+    "pino": "^9.2.0",
+    "pino-http": "^10.3.0",
+    "pino-pretty": "^11.0.0",
     "prisma": "^5.0.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/cors": "^2.8.0",
     "@types/express": "^4.17.0",
     "@types/express-rate-limit": "^5.1.3",
     "@types/helmet": "^4.0.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
+    "@types/supertest": "^6.0.3",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "eslint": "^8.57.0",
     "prettier": "^3.2.5",
+    "supertest": "^7.1.4",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.0.0"
+    "typescript": "^5.0.0",
+    "vitest": "^3.2.4"
+  },
+  "optionalDependencies": {
+    "prom-client": "^15.1.3"
   },
   "engines": {
     "node": ">=18"
