--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,15 +10,21 @@
     "typecheck": "tsc --noEmit",
     "test": "npx vitest run"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "@vitejs/plugin-react": "^4.0.0",
-    "typescript": "^5.0.0",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@types/testing-library__react": "^10.0.1",
+    "@vitejs/plugin-react": "^4.0.0",
+    "cypress": "^15.3.0",
+    "jsdom": "^27.0.0",
+    "typescript": "^5.0.0",
+    "vite": "^5.0.0",
+    "vitest": "^3.2.4"
+  },
+  "dependencies": {
+    "@sentry/react": "^10.14.0",
+    "@sentry/tracing": "^7.120.4"
   }
 }
