--- a/.gitignore
+++ b/.gitignore
@@ -137,3 +137,18 @@ dist
 # Vite logs files
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Project-specific ignores
+# SQLite databases and journals
+**/*.db
+**/*.db-journal
+
+# Backend uploads (runtime artifacts)
+backend/uploads/
+
+# Prisma nested artifacts
+backend/prisma/prisma/
+
+# Cypress artifacts
+cypress/screenshots/
+cypress/videos/
