--- a/backend/package.json
+++ b/backend/package.json
@@ -49,7 +49,8 @@
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "eslint": "^8.57.0",
+  "eslint": "^8.57.0",
+  "eslint-plugin-react": "^7.37.2",
     "prettier": "^3.2.5",
     "prisma": "^6.16.2",
     "supertest": "^7.1.4",
