--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,11 +13,15 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
+    "@typescript-eslint/eslint-plugin": "^7.0.0",
+    "@typescript-eslint/parser": "^7.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@types/testing-library__react": "^10.0.1",
     "@vitejs/plugin-react": "^4.0.0",
     "cypress": "^15.3.0",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.37.2",
     "jest-axe": "^10.0.0",
     "jsdom": "^27.0.0",
     "rollup-plugin-visualizer": "^6.0.3",
