SSO cleanup, config/env hardening, fix frontend test selectors, all tests green, builds verified

--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -9,7 +9,7 @@
   "parserOptions": {
     "ecmaVersion": 2021,
     "sourceType": "module",
-    "project": "./tsconfig.json"
+    "projectService": true
   },
   "plugins": ["@typescript-eslint", "security", "node"],
   "extends": [
