--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,7 +74,6 @@ jobs:
         working-directory: frontend
         run: npm run test --silent
 
-
       # E2E Tests
       - name: Cypress e2e
         uses: cypress-io/github-action@v6
@@ -112,11 +111,15 @@ jobs:
     steps:
       - name: Check deploy secrets
         shell: bash
+        env:
+          VPS_HOST: ${{ secrets.VPS_HOST }}
+          VPS_USER: ${{ secrets.VPS_USER }}
+          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
         run: |
           missing=()
-          [[ -z "${{ secrets.VPS_HOST }}" ]] && missing+=(VPS_HOST)
-          [[ -z "${{ secrets.VPS_USER }}" ]] && missing+=(VPS_USER)
-          [[ -z "${{ secrets.VPS_SSH_KEY }}" ]] && missing+=(VPS_SSH_KEY)
+          [[ -z "$VPS_HOST" ]] && missing+=(VPS_HOST)
+          [[ -z "$VPS_USER" ]] && missing+=(VPS_USER)
+          [[ -z "$VPS_SSH_KEY" ]] && missing+=(VPS_SSH_KEY)
           if [[ ${#missing[@]} -gt 0 ]]; then
             echo "Missing secrets: ${missing[*]}"
             exit 78 # neutral
@@ -124,10 +127,14 @@ jobs:
       - name: Deploy to VPS with Blue-Green Strategy
         uses: appleboy/ssh-action@v1.0.3
         if: ${{ success() }}
+        env:
+          VPS_HOST: ${{ secrets.VPS_HOST }}
+          VPS_USER: ${{ secrets.VPS_USER }}
+          VPS_SSH_KEY: ${{ secrets.VPS_SSH_KEY }}
         with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USER }}
-          key: ${{ secrets.VPS_SSH_KEY }}
+          host: ${{ env.VPS_HOST }}
+          username: ${{ env.VPS_USER }}
+          key: ${{ env.VPS_SSH_KEY }}
           script: |
             # Download enhanced deployment script if not exists
             if [[ ! -f /opt/deploy-blue-green.sh ]]; then
@@ -178,9 +185,14 @@ jobs:
       - name: Notify Failure
         if: ${{ needs.deploy.result == 'failure' }}
         run: |
-          echo "Deployment failed!"
-          echo "Automatic rollback should have been initiated"
-          echo "Check VPS logs for details"
+          echo "❌ Deployment failed!"
+          echo "🔄 Automatic rollback should have been initiated"
+          echo "🔍 Check VPS logs for details"
+
+      - name: Email Alert on Failure
+        if: ${{ needs.deploy.result == 'failure' }}
+        run: |
+          # TODO: Add email sending script here
 
       # Optional: create an issue on failure (requires repo write token)
       - name: Open issue on failure
