--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -9,6 +9,12 @@ http {
     include /etc/nginx/mime.types;
     default_type application/octet-stream;
 
+    # Properly handle websocket upgrades when present
+    map $http_upgrade $connection_upgrade {
+        default upgrade;
+        ''      close;
+    }
+
     # Logging
     log_format main '$remote_addr - $remote_user [$time_local] "$request" '
                     '$status $body_bytes_sent "$http_referer" '
@@ -42,6 +48,21 @@ http {
             try_files $uri $uri/ /index.html;
         }
 
+        # Proxy API requests to backend service
+        location /api/ {
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection $connection_upgrade;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_read_timeout 120s;
+            proxy_connect_timeout 10s;
+            proxy_send_timeout 120s;
+            proxy_pass http://backend:4000;
+        }
+
         # Cache static assets
         location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
             expires 1y;
@@ -53,5 +74,6 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
+        client_max_body_size 10m;
     }
 }
