--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,67 @@
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# Build outputs
+dist/
+build/
+.cache/
+.vite/
+.turbo/
+
+# Coverage
+coverage/
+
+# Environment files (never commit secrets)
+.env
+.env.*
+!.env.example
+!.env.template
+!.env.production.example
+backend/.env
+backend/.env.*
+!backend/.env.example
+!backend/.env.postgresql.template
+frontend/.env
+frontend/.env.*
+!frontend/.env.example
+
+# Databases
+backend/prisma/*.db
+backend/prisma/*.db-journal
+
+# Cypress artifacts
+frontend/cypress/downloads/
+frontend/cypress/screenshots/
+frontend/cypress/videos/
+
+# OS / editor junk
+.DS_Store
+Thumbs.db
+*.swp
+*.swo
+.idea/
+.vscode/
+
+# Archives and release bundles
+*.zip
+release/
+backend-dist.zip
+frontend-dist.zip
+pool-safe-*.zip
+portal-frontend-cpanel.zip
+
+# Logs
+*.log
+logs/
+
+# Generated artifacts
+backend/dist/
+frontend/stats.html
+
 # Logs
 logs
 *.log
